objects/VPPSR_Registration_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Result_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result Detail</label>
        <referenceTo>VPPSR_Result_Detail__c</referenceTo>
        <relationshipName>Registration_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>areAssetsSubjectToControl__c</fullName>
        <label>areAssetsSubjectToControl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>areProceedsClaimed__c</fullName>
        <label>areProceedsClaimed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attachments__c</fullName>
        <label>attachments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changeNumber__c</fullName>
        <label>changeNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collateralClassDescription__c</fullName>
        <label>collateralClassDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collateralClassType__c</fullName>
        <label>collateralClassType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collateralDescription__c</fullName>
        <label>collateralDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collateralType__c</fullName>
        <label>collateralType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>earlierRegistrationNumber__c</fullName>
        <label>earlierRegistrationNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>givingOfNoticeIdentifier__c</fullName>
        <label>givingOfNoticeIdentifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isInventory__c</fullName>
        <label>isInventory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <label>isMigrated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPMSI__c</fullName>
        <label>isPMSI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSecurityInterestRegistrationKind__c</fullName>
        <label>isSecurityInterestRegistrationKind</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSubordinate__c</fullName>
        <label>isSubordinate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTransitional__c</fullName>
        <label>isTransitional</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>migrationDetail__c</fullName>
        <label>migrationDetail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proceedsClaimedDescription__c</fullName>
        <label>proceedsClaimedDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationChangeTime__c</fullName>
        <label>registrationChangeTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationEndTime__c</fullName>
        <label>registrationEndTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationKind__c</fullName>
        <label>registrationKind</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationNumber__c</fullName>
        <label>registrationNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationStartTime__c</fullName>
        <label>registrationStartTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Registration Detail</label>
    <nameField>
        <displayFormat>VRD-{000000}</displayFormat>
        <label>Registration Detail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Registration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>